--- a/calculator/views/index.html
+++ b/calculator/views/index.html
@@ -20,6 +20,7 @@
 
 <script type="text/javascript" src = "../assets/script.js"></script>
 <script src="../assets/jquery-3.3.1.slim.min.js"></script>
+<script src="../assets/math.js"></script>
 <script src="../assets/popper.min.js"></script>
 <script src="../assets/bootstrap.min.js"></script>
 <style type="text/css">
@@ -51,6 +52,16 @@
     width: calc(25% - 3.5px);
     margin-left:0px; /*this apperantly regisers a ~1px margin. Now i remember why i dont do frontend*/
     margin-top:-5px; /*without this, vertical space is automatically inserted, which messes up all of the spacing*/
+    /* border:1px solid blue; */
+    border-radius: 8px;
+  }
+  .button-horizontal {
+    display:inline-block;
+    position:relative;
+    background-color: var(--color-secondary);
+    color: var(--color-text);
+    height: 100%;
+    width: calc(25% - 3.5px);
     /* border:1px solid blue; */
     border-radius: 8px;
   }
@@ -86,29 +97,39 @@
     width:10%;
     height:40px;
     border-bottom-right-radius: 10px;
-    background-color: red;
+    /* background-color: red; */
     z-index: 1;
   }
-
+  .lowerHorizontalButtons {
+    position:absolute;
+    bottom:66%;
+    left:50%;
+    height:55px;
+    /* border:1px solid blue; */
+    width:98%;
+    transform: translate(-50%, 0);
+  }
   .textField {
     position:absolute;
-    top:0;
+    top:40px;
     left:0;
     width:100%;
-    height:25%;
+    height:15%;
     background-color: var(--color-primary);
     color: var(--color-text);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 175%;
-    /* border:1px solid red; */
+    font-size: 340%;
+    border:1px solid red;
+    text-align: right;
+    white-space: nowrap;
   }
 
   .numberContainer {
     position: absolute;
     left:50%;
     transform: translate(-50%, 0);
-    height:75%;
-    top:26%;
+    height:65%;
+    bottom:0;
     width:98%;
     background-color: var(--color-primary);
     /* border: 1px solid green; */
@@ -125,39 +146,78 @@
   }
 </style>
   <div class="themeSwitcher" id="themeSwitcher" onclick="toggleTheme()"></div>
-  <div class="textField"></div>
-  <div class="numberContainer">
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">7</div></div>
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">8</div></div>
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">9</div></div>
-    <div class="button-oprField" onclick="registerCharacter(this)"><div class="button-text">/</div></div>
-
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">4</div></div>
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">5</div></div>
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">6</div></div>
-    <div class="button-oprField" onclick="registerCharacter(this)"><div class="button-text">X</div></div>
-
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">1</div></div>
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">2</div></div>
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">3</div></div>
-    <div class="button-oprField" onclick="registerCharacter(this)"><div class="button-text">-</div></div>
-
-    <div class="button-numberField" onclick="registerCharacter(this)"><div class="button-text">.</div></div>
-    <div class="button-numberField" onclick="registerNumber(this)"><div class="button-text">0</div></div>
-    <div class="button-numberField" onclick="registerOperation(this)" style="background-color: var(--color-accent)"><div class="button-text">=</div></div>
-    <div class="button-oprField" onclick="registerCharacter(this)"><div class="button-text">+</div></div>
+  <textarea class="textField" id="mathArea" readonly></textarea>
+  <div class="lowerHorizontalButtons" style="bottom:73%; overflow-x:scroll; overflow-y: hidden; white-space: nowrap;">
+    <div class="button-horizontal" onclick="registerSpecial(this)" style="width:23%"><div class="button-text">sin()</div></div>
+    <div class="button-horizontal" onclick="registerSpecial(this)" style="width:23%"><div class="button-text">cos()</div></div>
+    <div class="button-horizontal" onclick="registerSpecial(this)" style="width:23%"><div class="button-text">tan()</div></div>
+    <div class="button-horizontal" onclick="registerSpecial(this)" style="width:23%"><div class="button-text">√()</div></div>
+    <div class="button-horizontal" onclick="register(this)" style="width:23%"><div class="button-text">^</div></div>
   </div>
+  <div class="lowerHorizontalButtons">
+    <div class="button-horizontal" onclick="moveCursor(1)"><div class="button-text">←</div></div>
+    <div class="button-horizontal" onclick="moveCursor(-1)"><div class="button-text">→</div></div>
+    <div class="button-horizontal" style="background-color:rgb(247, 69, 69)" onclick="registerOperation(this)"><div class="button-text">CLR</div></div>
+    <div class="button-horizontal" style="background-color:rgb(247, 69, 69)" onclick="registerOperation(this)"><div class="button-text">DEL</div></div>
+  </div>
+  <div class="numberContainer">
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">7</div></div>
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">8</div></div>
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">9</div></div>
+    <div class="button-oprField" onclick="register(this)"><div class="button-text">/</div></div>
+
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">4</div></div>
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">5</div></div>
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">6</div></div>
+    <div class="button-oprField" onclick="register(this)"><div class="button-text">*</div></div>
+
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">1</div></div>
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">2</div></div>
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">3</div></div>
+    <div class="button-oprField" onclick="register(this)"><div class="button-text">-</div></div>
+
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">.</div></div>
+    <div class="button-numberField" onclick="register(this)"><div class="button-text">0</div></div>
+    <div class="button-numberField" onclick="registerOperation(this)" style="background-color: var(--color-accent)"><div class="button-text">=</div></div>
+    <div class="button-oprField" onclick="register(this)"><div class="button-text">+</div></div>
+  </div>
+
 <script type="text/javascript">
+
 	function toggle_popover() {
 		$('#popover').popover('toggle')
 	}
 
   //globals
   let currentTheme = "light";
+  let currentEquation = "";
+  let mathArea;
+  //position is inverse (0 = end of the line)
+  let cursorPosition = 0;
+  let cursorOn = true;
 
   window.onload = function() {
     updateTheme();
+    mathArea = document.getElementById("mathArea");
   }
+
+  //update the equation to show in the text field
+  function updateEquation() {
+    let relativeCursorPosition = currentEquation.length-cursorPosition;
+    mathArea.value = [currentEquation.slice(0, relativeCursorPosition), (cursorOn)? "|" : " ", [currentEquation.slice(relativeCursorPosition)]].join('');
+  }
+
+  //move the cursor position
+  function moveCursor(amt) {
+    cursorPosition += amt;
+    updateEquation();
+  }
+
+  //loop to toggle cursor
+  let cursorLoop = setInterval(function(){
+    cursorOn = !cursorOn;
+    updateEquation();
+  }, 500);
 
   //function for toggling the global theme
   function toggleTheme() {
@@ -172,14 +232,25 @@
   }
 
   //registers for buttons
-  function registerNumber(element) {
-    let thisNumber = parseInt(element.children[0].innerHTML);
-    console.log(`register number: ${thisNumber}`);
+  function register(element) {
+    let thisChar = element.children[0].innerHTML;
+    let relativeCursorPosition = currentEquation.length-cursorPosition;
+    console.log(`register: ${thisChar}`);
+    
+    currentEquation = [currentEquation.slice(0, relativeCursorPosition), thisChar, currentEquation.slice(relativeCursorPosition)].join('');
+
+    updateEquation();
   }
 
-  function registerCharacter(element) {
-    let thisCharacter = element.children[0].innerHTML;
-    console.log(`register char: ${thisCharacter}`);
+  //register special (multicharacter things)
+  function registerSpecial(element) {
+    let thisChar = element.children[0].innerHTML;
+    let relativeCursorPosition = currentEquation.length-cursorPosition;
+    console.log(`register: ${thisChar}`);
+    
+    currentEquation = [currentEquation.slice(0, relativeCursorPosition), thisChar, currentEquation.slice(relativeCursorPosition)].join('');
+    cursorPosition++; //puts the cursor in the parantheses of the function
+    updateEquation();
   }
 
   function registerOperation(element) {
@@ -187,12 +258,20 @@
     switch(thisOperation) {
       case "=":
         console.log("run equation");
+        currentEquation = doTheMath(currentEquation).toString();
+        cursorPosition = 0;
+        updateEquation();
       break;
       case "DEL":
         console.log("delete character");
+        let relativeCursorPosition = currentEquation.length-cursorPosition;
+        currentEquation = [currentEquation.slice(0, relativeCursorPosition-1), currentEquation.slice(relativeCursorPosition)].join('');
       break;
       case "CLR": 
         console.log("clear");
+        currentEquation = "";
+        cursorPosition = 0;
+        updateEquation();
       break;
     }
   }
