--- a/calculator/views/index.html
+++ b/calculator/views/index.html
@@ -30,6 +30,8 @@
     --color-third: rgb(141, 141, 141);
     --color-accent: rgb(69, 170, 247);
     --color-text: black;
+    --color-toggleButton: rgb(12, 12, 12);
+    --theme-icon: url(/assets/moon.png)
   }
   .theme-dark {
     --color-primary: rgb(24, 24, 24);
@@ -37,6 +39,8 @@
     --color-third: rgb(87, 87, 87);
     --color-accent: rgb(247, 155, 69);
     --color-text: white;
+    --color-toggleButton: rgb(150, 150, 150);
+    --theme-icon: url(/assets/sun.png)
   }
 
   body{
@@ -94,15 +98,25 @@
     position: absolute;
     left:0;
     top:0;
-    width:10%;
-    height:40px;
+    width:15%;
+    height:50px;
     border-bottom-right-radius: 10px;
-    /* background-color: red; */
+    background-color: var(--color-toggleButton);
     z-index: 1;
+  }
+  .themeIcon{
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform:translate(-50%, -50%);
+    background-image: var(--theme-icon);
+    width:45px;
+    height:45px;
+    pointer-events: none;
   }
   .lowerHorizontalButtons {
     position:absolute;
-    bottom:66%;
+    bottom:66.5%;
     left:50%;
     height:55px;
     /* border:1px solid blue; */
@@ -111,15 +125,15 @@
   }
   .textField {
     position:absolute;
-    top:40px;
     left:0;
     width:100%;
-    height:15%;
+    height:10%;
+    bottom:82%;
     background-color: var(--color-primary);
     color: var(--color-text);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 340%;
-    border:1px solid red;
+    border:none;
     text-align: right;
     white-space: nowrap;
   }
@@ -145,9 +159,11 @@
     background-color: var(--color-third);
   }
 </style>
-  <div class="themeSwitcher" id="themeSwitcher" onclick="toggleTheme()"></div>
+  <div class="themeSwitcher" id="themeSwitcher" onclick="toggleTheme()">
+    <div class="themeIcon"></div>
+  </div>
   <textarea class="textField" id="mathArea" readonly></textarea>
-  <div class="lowerHorizontalButtons" style="bottom:73%; overflow-x:scroll; overflow-y: hidden; white-space: nowrap;">
+  <div class="lowerHorizontalButtons" style="bottom:74%; overflow-x:scroll; overflow-y: hidden; white-space: nowrap;">
     <div class="button-horizontal" onclick="registerSpecial(this)" style="width:23%"><div class="button-text">sin()</div></div>
     <div class="button-horizontal" onclick="registerSpecial(this)" style="width:23%"><div class="button-text">cos()</div></div>
     <div class="button-horizontal" onclick="registerSpecial(this)" style="width:23%"><div class="button-text">tan()</div></div>
@@ -204,7 +220,7 @@
   //update the equation to show in the text field
   function updateEquation() {
     let relativeCursorPosition = currentEquation.length-cursorPosition;
-    mathArea.value = [currentEquation.slice(0, relativeCursorPosition), (cursorOn)? "|" : " ", [currentEquation.slice(relativeCursorPosition)]].join('');
+    mathArea.value = [currentEquation.slice(0, relativeCursorPosition), (cursorOn)? "▮" : "▯", [currentEquation.slice(relativeCursorPosition)]].join('');
   }
 
   //move the cursor position
@@ -266,6 +282,7 @@
         console.log("delete character");
         let relativeCursorPosition = currentEquation.length-cursorPosition;
         currentEquation = [currentEquation.slice(0, relativeCursorPosition-1), currentEquation.slice(relativeCursorPosition)].join('');
+        updateEquation();
       break;
       case "CLR": 
         console.log("clear");
