added build instructions to readme and added message in index.html

--- a/calculator/views/index.html
+++ b/calculator/views/index.html
@@ -2,6 +2,7 @@
   "I pledge my honor that I have abided by the Stevens Honor System."
 
   It has been a while since I have written front-end code, so please excuse my spaghetti.
+  Here's a link to the full code if you'd like: https://github.com/KCGD/androidjs-calc
 -->
 
 <!DOCTYPE html>
